overlapping button fix

--- a/common/css/search.css
+++ b/common/css/search.css
@@ -2245,14 +2245,14 @@ div.recorddiv:hover > #recordID {
 	background-color: #F2F2F2 !important;
 	top: 6px;
 	position: absolute;
-	left: 498px;
 	z-index:10;
 	padding:0 !important;
-	display:block;
+	display:inline-block !important;
 	white-space:nowrap;
 	text-align:right;
 	width: 120px;
 	overflow: hidden;
+	margin-left:3px
 }
 
 #searchButtons .searchButtonsTrigger {
